tests/NormalTests/paczka2/big_fuzzy/62026395.err
Error in line 1: AEAo4 A158 39,9
Error in line 21: AEAo4 A158 54,1
Error in line 19: OgI S401 61,0
Error in line 38: B5cCCG A158 89,3
Error in line 40: B5cCCG A58 50,0
Error in line 44: 7o1u A221 95,7
Error in line 61: S401 S401 6,5
Error in line 65: S401 S293 59,4
Error in line 72: 9pByw A158 107,7
Error in line 71: S401 A158 82,2
Error in line 73: 9pByw S293 23,1
Error in line 86: SoAzitcHD A158 80,1
Error in line 93: AEAo4 A221 58,6
Error in line 98: AEAo4 S401 11,2
Error in line 101: AEAo4 S293 37,4
Error in line 81: 7o1u S293 2,0
Error in line 97: SoAzitcHD S293 31,8
Error in line 119: AEAo4 A158 172,26
Error in line 112: 9pByw S401 2,2
Error in line 121: 9pByw A221 -2,0
Error in line 115: 7o1u S401 68,8
Error in line 109: AEAo4 A158 47,8
Error in line 133: OgI S293 19,7
Error in line 138: OgI A158 57,4
Error in line 150: AEAo4 S293 18,1
Error in line 143: 7o1u S401 109,6
Error in line 156: 9pByw A221 70,8
Error in line 161: S401 A158 86,8
Error in line 166: AEAo4 S293 41,9
Error in line 162: 9pByw S293 91,5
Error in line 165: S401 S401 8,0
Error in line 211: OgI A158 74,57
Error in line 213: 7o1u S401 57,5
Error in line 219: 7o1u A158 255,4
Error in line 231: B5cCCG S401 80,9
Error in line 227: OgI A158 8,7
Error in line 236: OgI S401 40,1
Error in line 242: AEAo4 A158 61,2
Error in line 237: OgI S293 96,2
